little changes to some of the pages

--- a/FanPage/Views/Home/History.cshtml
+++ b/FanPage/Views/Home/History.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        Person's History
+         No one knows where Junebug came form she just showed up one day.
     </div>
 </body>
 
