--- a/FanPage/Views/Home/Media.cshtml
+++ b/FanPage/Views/Home/Media.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-       Books and print media can be found here
+       Books and print media are under construction
     </div>
 </body>
 
