--- a/FanPage/Views/Home/Online.cshtml
+++ b/FanPage/Views/Home/Online.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        Links to online media
+        Links to online media are under construction
     </div>
 </body>
 
