--- a/FanPage/Views/Home/Stories.cshtml
+++ b/FanPage/Views/Home/Stories.cshtml
@@ -11,7 +11,26 @@
 </head>
 <body>
     <div>
-        Stories about a person
+        <h1>Here we can all share our favorite stories about Junebug!</h1>
+    </div>
+    <div>
+        <form>
+            <p>
+                <label>Name:</label>
+                <input type="text" name="nameIn"/>
+            </p>
+            <p>
+                <label>Email:</label>
+                <input type="text" name="emailIn" />
+            </p>
+            <p>
+                <label>Your Story:</label>
+                <textarea rows="6" cols="50">
+                </textarea>
+            </p>
+            <button type="submit">Submit </button>
+            
+        </form>
     </div>
 </body>
 
