fixed issue with view

--- a/FanPage/Views/Home/Online.cshtml
+++ b/FanPage/Views/Home/Online.cshtml
@@ -1,13 +1,13 @@
 ﻿
 @{
-    //Layout = null;
+    Layout = null;
 }
 
 <!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>On Line Media</title>
+    <title>Online</title>
 </head>
 <body>
     <div>
