--- a/FanPage/Views/Home/Index.cshtml
+++ b/FanPage/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
         Read some Junebug stories <a asp-action="Stories">here</a>
     </p>
     <p>
-        Or click <a asp-action="Sources">here</a> to see more Junebug related media.
+        Or click <a href="Sources/Sources">here</a> to see more Junebug related media.
     </p>
  
 </body>
