fixed issue with passing story info

--- a/FanPage/Views/Home/WriteStory.cshtml
+++ b/FanPage/Views/Home/WriteStory.cshtml
@@ -17,7 +17,7 @@
     </p>
     <p>
         <label for="storyText">Your Story:</label>
-        <textarea for="storyText" rows="6" cols="50">
+        <textarea name="storyText" rows="6" cols="50">
                 </textarea>
     </p>
     <button type="submit">Submit </button>
