added comments and rating. everything is working well:)

--- a/FanPage/Views/Home/History.cshtml
+++ b/FanPage/Views/Home/History.cshtml
@@ -1,18 +1,13 @@
-﻿
-@{
-    Layout = null;
+﻿@{
+    Layout = "~/Views/Shared/_Header.cshtml";
+    ViewBag.Title = "History";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>History</title>
-</head>
+
 <body>
     <div>
-         No one knows where Junebug came form she just showed up one day.
+        No one knows where Junebug came form she just showed up one day.
     </div>
 </body>
 
-</html>
+
