--- a/FanPage/Views/Sources/Sources.cshtml
+++ b/FanPage/Views/Sources/Sources.cshtml
@@ -1,21 +1,13 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Header.cshtml";
+    ViewBag.Title = "Media Home";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Sources</title>
-</head>
-<body>
-    <div>
-        Junebug has a pretty big online and offline footprint.
-        <p>See more of the extensive Junebug official library <a asp-action="Media">Here</a></p>
-        <p>See more of Junebug online <a asp-action="Online">Here</a></p>
-    </div>
+<div>
+    Junebug has a pretty big online and offline footprint.
+    <p>See more of the extensive Junebug official library <a asp-action="Media">Here</a></p>
+    <p>See more of Junebug online <a asp-action="Online">Here</a></p>
+</div>
 
-</body>
 
-</html>
