--- a/FanPage/Views/Home/Index.cshtml
+++ b/FanPage/Views/Home/Index.cshtml
@@ -1,31 +1,23 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Header.cshtml";
+    ViewBag.Title = "Home";
 }
+          
+<div>
+    <h1>The Official Junbug Fan Page</h1>
+    <h4>Junebug is a cute, but grumpy black cat</h4>
+    <img src="~/images/bug1.jpg" alt="Junebug in the door" width="300" height="400" />'
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width"/>
-    <title>Home Page</title>
-</head>
-<body>
-    <div>
-        <h1>The Official Junbug Fan Page</h1>
-        <h4>Junebug is a cute, but grumpy black cat</h4>
-        <img src="~/images/bug1.jpg" alt="Junebug in the door" width="300" height="400" />'
-    </div>
-    <p>
-        Learn more about Junebug's life <a asp-action="History">here</a>
-    </p>
-    <p>
-        Read some Junebug stories <a asp-action="Stories">here</a>
-    </p>
-    <p>
-        Or click <a href="Sources/Sources">here</a> to see more Junebug related media.
-    </p>
- 
-</body>
+</div>
+<p>
+    Learn more about Junebug's life <a asp-action="History">here</a>
+</p>
+<p>
+    Read some Junebug stories <a asp-action="Stories">here</a>
+</p>
+<p>
+    Or click <a href="Sources/Sources">here</a> to see more Junebug related media.
+</p>
 
-</html>
 
