--- a/FanPage/Views/Home/Index.cshtml
+++ b/FanPage/Views/Home/Index.cshtml
@@ -3,21 +3,82 @@
     Layout = "~/Views/Shared/_Header.cshtml";
     ViewBag.Title = "Home";
 }
-          
+
+<!--
 <div>
-    <h1>The Official Junbug Fan Page</h1>
-    <h4>Junebug is a cute, but grumpy black cat</h4>
-    <img src="~/images/bug1.jpg" alt="Junebug in the door" width="300" height="400" />'
+    <h1 class="center">The Official Junbug Fan Page</h1>
+    <h4 class="center">Junebug is a cute, but grumpy black cat</h4>
+    <img src="~/images/bug1.jpg" alt="Junebug in the door" class="center-img" width="300" height="400"/>'
 
 </div>
-<p>
-    Learn more about Junebug's life <a asp-action="History">here</a>
-</p>
-<p>
-    Read some Junebug stories <a asp-action="Stories">here</a>
-</p>
-<p>
-    Or click <a href="Sources/Sources">here</a> to see more Junebug related media.
-</p>
 
+<div class="center">
+    <p>
+        Learn more about Junebug's life <a asp-action="History">here</a>
+    </p>
+    <p>
+        Read some Junebug stories <a asp-action="Stories">here</a>
+    </p>
+    <p>-->  
+        <!--Or click <a href="Sources/Sources">here</a> to see more Junebug related media.-->
+        <!--Or click <a asp-controller="Sources" asp-action="sources">here</a> to see more Junebug related media.
+    </p>
+</div>
+-->
+<div class="grid">
+    <article class="card product-item">
+        <a asp-action="History">
+            <header class="card__header">
+                <h1 class="product__title center">
+                    History
+                </h1>
+            </header>
+            <div class="card__image center">
+                <img src="~/images/kitten.jpg" class="book-img" />
+            </div>
+            <div class="card__content">
+                <p class="product__description">
+                    Learn about Junebug's Life
+                </p>
+            </div>
+            
+        </a>
+    </article>
 
+    <article class="card product-item">
+        <a asp-action="Stories">
+            <header class="card__header">
+                <h1 class="product__title center">
+                    Stories
+                </h1>
+            </header>
+            <div class="card__image center">
+                <img src="~/images/bug4.jpg" class="book-img"/>
+            </div>
+            <div class="card__content">
+                <p class="product__description">
+                    Read Junebug Stories
+                </p>
+            </div>
+            
+        </a>
+    </article>
+
+    <article class="card product-item">
+        <a asp-controller="sources" asp-action="sources">
+            <header class="card__header">
+                <h1 class="product__title center">
+                    Media
+                </h1>
+            </header>
+            <div class="card__image center">
+                <img src="~/images/bug3.jpg" class="book-img"/>
+            </div>
+            <div class="card__content">
+                <p class="product__description">
+                    View Junebug Media
+                </p>
+            </div>
+        </a>
+    </article>
+</div>
