--- a/FanPage/wwwroot/css/main.css
+++ b/FanPage/wwwroot/css/main.css
@@ -8,6 +8,12 @@
     width: 100%;
     margin-bottom: 0.25rem;
 }
+.form-control-search {
+    display: block;
+    width: 35px;
+    margin-bottom: 0.25rem;
+    
+}
 
 .form-control input {
     border: 1px solid #a1a1a1;
@@ -90,8 +96,8 @@ body {
 
 button:hover,
 button:active {
-    background-color: #00628B;
-    color: #81A594
+    background-color: black;
+    color: white;
 }
 
 .product-form {
@@ -109,6 +115,11 @@ button:active {
 
 .card {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    margin-top:50px;
+}
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .card__header,
@@ -162,43 +173,39 @@ button:active {
     border-radius: 3px;
     background: white;
     cursor: pointer;
+    
 }
 
 btn:hover,
 btn:active {
-    background-color: #00628B;
-    color: #81A594
+    background-color: black;
+    color: white;
 }
 
-.product-form {
+.story-form {
     width: 20rem;
     max-width: 90%;
     margin: auto;
 }
 
-.product-form {
+.story-form {
     width: 20rem;
     max-width: 90%;
     margin: auto;
 }
 
-.product-item {
+.story-item {
     width: 20rem;
     max-width: 95%;
 }
 
-.product__title {
+.story__title {
     font-size: 1.2rem;
     text-align: center;
 }
 
-.product__price {
-    text-align: center;
-    color: #4d4d4d;
-    margin-bottom: 0.5rem;
-}
 
-.product__description {
+.story__description {
     text-align: center;
 }
 /* Navbar container */
@@ -208,15 +215,15 @@ btn:active {
     font-family: Arial;
 }
 
-    /* Links inside the navbar */
-    .navbar a {
-        float: left;
-        font-size: 16px;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
+/* Links inside the navbar */
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
 
 /* The dropdown container */
 .dropdown {
@@ -224,22 +231,22 @@ btn:active {
     overflow: hidden;
 }
 
-    /* Dropdown button */
-    .dropdown .dropbtn {
-        font-size: 16px;
-        border: none;
-        outline: none;
-        color: white;
-        padding: 14px 16px;
-        background-color: inherit;
-        font-family: inherit; /* Important for vertical align on mobile phones */
-        margin: 0; /* Important for vertical align on mobile phones */
-    }
+/* Dropdown button */
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+}
 
-    /* Add a red background color to navbar links on hover */
-    .navbar a:hover, .dropdown:hover .dropbtn {
-        background-color: red;
-    }
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
@@ -251,20 +258,20 @@ btn:active {
     z-index: 1;
 }
 
-    /* Links inside the dropdown */
-    .dropdown-content a {
-        float: none;
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-    }
+/* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
 
-        /* Add a grey background color to dropdown links on hover */
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -273,4 +280,39 @@ btn:active {
 
 .text-box {
     border: 1px solid black;
+    width:800px;
 }
+.center-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align:center;
+ 
+}
+.book-img{
+    height:215px;
+    width:124px;
+}
+.text{
+    word-wrap:break-word;
+    width: 800px;
+}
+
+.text-storiespage {
+    word-wrap: break-word;
+    width: 800px;
+    text-align: left;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding:20px;
+}
+
+/*testing*/
+
