--- a/FanPage/wwwroot/css/site.css
+++ b/FanPage/wwwroot/css/site.css
@@ -40,3 +40,14 @@ body {
 .text-box{
     border:1px solid black;
 }
+.center-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    width: 300px; 
+    height:400px;
+}
+img {
+    image-orientation: from-image;
+}
