create lab 4 branch

--- a/FanPage/Views/Home/Index.cshtml
+++ b/FanPage/Views/Home/Index.cshtml
@@ -25,6 +25,8 @@
     </p>
 </div>
 -->
+
+<!--maybe use jumbotron text-center bootstrap-->
 <div class="grid">
     <article class="card product-item">
         <a asp-action="History">
