--- a/FanPage/Views/Home/WriteStory.cshtml
+++ b/FanPage/Views/Home/WriteStory.cshtml
@@ -16,7 +16,7 @@
         <input for="title" type="text" name="title" />
     </div>
     <div class="form-control">
-        <label for="description">Name:</label>
+        <label for="description">Story Description:</label>
         <input for="description" type="text" name="description" />
     </div>
     <div class="form-control">
